# YATIRIMKARARI

./: .replit  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-import-streamlit-as-st-import-pandas-as-pd-import-plotl_1768142483857.txt  VIX_TABLO_1768335315927.xlsx  profil_kriterleri_1768252006130.xlsx
