[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "streamlit-autorefresh>=1.0.1",
    "yfinance>=1.0",
]
